--- a/nx.json
+++ b/nx.json
@@ -20,7 +20,7 @@
   },
   "projects": {
     "frontend-client": {
-      "tags": ["scope: frontend-client"]
+      "tags": []
     },
     "frontend/client-e2e": {
       "tags": [],
